# WRover_Software_23-24

./: .catkin_workspace  .clang-format  .clang-tidy  .clangd  .dockerignore  .gitignore  .gitmodules  Dockerfile  Doxyfile  LICENSE  README.md  assemble.py  bootstrap.sh  docker_attach.sh  dummy_pub.py  env.sh  env_remote.sh  kill-ros.sh  launch.sh  lightData.csv  lightDataSample1.csv  lightDataSample2.csv  make_docs.sh  make_py_nodes_755.py  mapproxy.yaml  out.temp  package-lock.json  project.json  reconfig_arm_urdf.sh  requirements.txt  ros_dashboard.py  sectors.data  setup.sh  setup.zsh  test_arm_control_stack.sh  test_drive.py  testscrpt.py
.devcontainer/: devcontainer.json
.github/ISSUE_TEMPLATE/: new-task.md
.github/workflows/: gh-pages.yaml  main.yml
docs/: build_tools.md  package_organization.md  ros_abstraction_overview.md  setup_dev.md  setup_dev_docker.md  setup_rover.md
docs/topics/: control_hsi.md  hci_logic.md  logic_control.md
hud/: config.json
hud/assets/: base-styles.css  spc-custom-styles.css
src/arm_assembly/: CMakeLists.txt  package.xml
src/arm_assembly/launch/: display.launch  gazebo.launch
src/arm_assembly/meshes/: base_link.STL  manipulator_link.STL  wirstBase_link.STL  wrist_link.STL
src/arm_assembly/urdf/: arm_assembly.csv  arm_assembly.urdf
src/gazebot24/: CMakeLists.txt  README.md  package.xml
src/gazebot24/config/: gazebo.xacro  inertial.xacro  robot.proto  robot.urdf  robot.urdf.xacro
src/gazebot24/launch/: display.launch  gazebo.launch  rsp.launch.py  rsp_sim.launch.py  webot.launch
src/wr_control_arm/: CMakeLists.txt  package.xml
src/wr_control_arm/src/: ArmControlSystem.cpp
src/wr_control_drive_arm/: CMakeLists.txt  README.md  package.xml  structure.wsd
src/wr_control_drive_arm/config/: arm_motor_PID.yaml  arm_motor_PID_mock.yaml  arm_motor_PID_real.yaml  arm_parameters_mock.yaml  arm_parameters_real.yaml  encoder_parameters.yaml  encoder_parameters_mock.yaml  encoder_parameters_real.yaml  mocked_encoder_parameters.yaml
src/wr_control_drive_arm/launch/: actionserver.launch  jointstatepublisher.launch  jsp_and_bad_driver.launch  std.launch  testDifferential.launch
src/wr_control_drive_arm/src/: AbstractJoint.cpp  Joint.cpp  (+25 more)
src/wr_control_drive_ds/: CMakeLists.txt  README.md  package.xml
src/wr_control_drive_science/: CMakeLists.txt  README.md  TeleopScienceControl.cpp  package.xml  reqs.md
src/wr_drive_msgs/: CMakeLists.txt  README.md  package.xml
src/wr_entry_point/: CMakeLists.txt  README.md  package.xml  rqt_plugin.xml  setup.py
src/wr_hci_hid/: CMakeLists.txt  package.xml
src/wr_hci_hud/: CMakeLists.txt  README.md  package-lock.json  package.json  package.xml
src/wr_hsi_roboclaw/: CMakeLists.txt  README.md  package.xml
src/wr_hsi_sensing/: CMakeLists.txt  README.md  package.xml  setup.py
src/wr_led_matrix/: CMakeLists.txt  README.md  a.out  flashy.py  matrix.cpp  package.xml  setup.py
src/wr_logic_ai/: .CMakeLists.txt.swp  CMakeLists.txt  CMakeLists.txt.old  README.md  package.xml  package.xml.old  requirements-color-state-indication.md  setup.py  test.py
src/wr_logic_joint_driver_arm/: CMakeLists.txt  package.xml
src/wr_logic_longrange/: CMakeLists.txt  README.md  package.xml  setup.py
src/wr_logic_search/: CMakeLists.txt  README.md  package.xml  setup.py
src/wr_logic_shortrange/: CMakeLists.txt  README.md  package.xml  setup.py
src/wr_logic_teleop_arm/: CMakeLists.txt  end_effector_controller_doc.md  package.xml
src/wr_logic_teleop_ds/: CMakeLists.txt  README.md  package.xml  std.launch
src/wr_logic_teleop_science/: CMakeLists.txt  README.md  package.xml
src/wroboarm_21/: .setup_assistant  CMakeLists.txt  package.xml
src/wroboarm_22/: .setup_assistant  CMakeLists.txt  package.xml
src/wroboarm_23/: .setup_assistant  CMakeLists.txt  README.md  package.xml
(+425 files in other folders)
